# fallback-cache

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: advanced-usage.md  api-reference.md  changelog.md  index.md  quickstart.md
src/fallback_cache/: __init__.py  _circuit_breaker.py  _keys.py  _serializers.py  async_cache.py  cache.py
tests/: conftest.py  test_async_cache.py  test_build_key.py  test_circuit_breaker.py  test_fallback.py  test_memory_backend.py  test_redis_backend.py  test_serializers.py  test_sync_circuit_breaker.py
